--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,12 @@
+@font-face {
+    font-family: "Product Sans";
+    src: url(../fonts/Product\ Sans\ Regular.ttf);
+}
+
+* {
+    font-family: 'Product Sans';
+}
+
 body {
     width: 100%;
     height: 100%;
@@ -18,20 +27,23 @@ body {
 #battery-rec {
     position: absolute;
     width: 10%;
-    height: 5%;
-    top: 20%;
-    left: 63%;
-    border: solid 2px white;
+    height: 3%;
+    top: 50%;
+    left: 50%;
+    transform: translate(-60%, -50%);
+    border: solid 3px #111;
 }
 
 #battery-fill {
     position: absolute;
     width: 11%;
-    height: 6%;
-    top: 20%;
-    left: 63%;
+    height: 3%;
+    top: 50%;
+    left: 50%;
+    transform: translate(-63%, -50%);
     z-index: 10;
-    background-color: white;
+    background-color: #333;
+    z-index: -1;
 }
 
 /*
@@ -39,11 +51,18 @@ hour&minutes
 */
 
 #rec-time {
+    display: block;
     position: absolute;
-    width: 80%;
-    height: 30%;
-    top: 25%;
-    left: 12%;
+    height: min-content;
+    width: min-content;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+
+#rec-time * {
+    width: 100px;
+    text-align: center;
 }
 
 #str-hours {
